--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,17 @@
         <item>metric</item>
         <item>imperial</item>
     </string-array>
+
+    <!--<string-array name="pref_units_options">-->
+        <!--<item>@string/pref_units_label_metric</item>-->
+        <!--<item>@string/pref_units_label_imperial</item>-->
+    <!--</string-array>-->
+
+    <!--<string-array name="pref_units_values">-->
+        <!--<item>@string/pref_units_metric</item>-->
+        <!--<item>@string/pref_units_imperial</item>-->
+    <!--</string-array>-->
+
+
+
 </resources>
